parser_generateByBison.output
Estado 99conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: PROGRAMA $end

    1 PROGRAMA: DECLARACAO_LISTA

    2 DECLARACAO_LISTA: DECLARACAO_LISTA DECLARACAO
    3                 | DECLARACAO

    4 DECLARACAO: VAR_DECLARACAO
    5           | FUN_DECLARACAO

    6 VAR_DECLARACAO: TIPO_ESPECIFICADOR ID PONTOVIRGULA
    7               | TIPO_ESPECIFICADOR ID ABRECOLCHETE DIGITO FECHACOLCHETE PONTOVIRGULA

    8 TIPO_ESPECIFICADOR: INT
    9                   | VOID
   10                   | STRING

   11 FUN_DECLARACAO: TIPO_ESPECIFICADOR ID ABREPARENTESIS PARAMS FECHAPARENTESIS COMPOSTO_DECL

   12 PARAMS: PARAM_LISTA
   13       | VOID

   14 PARAM_LISTA: PARAM_LISTA VIRGULA PARAM
   15            | PARAM

   16 PARAM: TIPO_ESPECIFICADOR ID
   17      | TIPO_ESPECIFICADOR ID ABRECOLCHETE FECHACOLCHETE

   18 COMPOSTO_DECL: ABRECHAVE LOCAL_DECLARACOES STATEMENT_LISTA FECHACHAVE

   19 LOCAL_DECLARACOES: LOCAL_DECLARACOES VAR_DECLARACAO
   20                  | /* vazio */

   21 STATEMENT_LISTA: STATEMENT_LISTA STATEMENT
   22                | /* vazio */

   23 STATEMENT: EXPRESSAO_DECL
   24          | COMPOSTO_DECL
   25          | SELECAO_DECL
   26          | INTERACAO_DECL
   27          | RETORNO_DECL

   28 EXPRESSAO_DECL: EXPRESSAO PONTOVIRGULA
   29               | PONTOVIRGULA

   30 SELECAO_DECL: IF ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT
   31             | IF ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT ELSE STATEMENT

   32 INTERACAO_DECL: WHILE ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT

   33 RETORNO_DECL: RETURN PONTOVIRGULA
   34             | RETURN EXPRESSAO PONTOVIRGULA

   35 EXPRESSAO: VAR IGUAL EXPRESSAO
   36          | SIMPLES_EXPRESSAO

   37 VAR: ID
   38    | ID ABRECOLCHETE EXPRESSAO FECHACOLCHETE

   39 SIMPLES_EXPRESSAO: SOMA_EXPRESSAO RELACIONAL SOMA_EXPRESSAO
   40                  | SOMA_EXPRESSAO

   41 RELACIONAL: MENORIGUAL
   42           | MENOR
   43           | MAIOR
   44           | MAIORIGUAL
   45           | IGUALIGUAL
   46           | DIFERENTE

   47 SOMA_EXPRESSAO: SOMA_EXPRESSAO SOMA TERMO
   48               | TERMO

   49 SOMA: MAIS
   50     | MENOS

   51 TERMO: TERMO MULT FATOR
   52      | FATOR

   53 MULT: VEZES
   54     | BARRA

   55 FATOR: ABREPARENTESIS EXPRESSAO FECHAPARENTESIS
   56      | VAR
   57      | ATIVACAO
   58      | DIGITO
   59      | CADEIASTRING

   60 ATIVACAO: ID ABREPARENTESIS ARGS FECHAPARENTESIS

   61 ARGS: ARG_LISTA
   62     | /* vazio */

   63 ARG_LISTA: ARG_LISTA VIRGULA EXPRESSAO
   64          | EXPRESSAO


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
STRING (258) 10
IF (259) 30 31
ELSE (260) 31
INT (261) 8
RETURN (262) 33 34
VOID (263) 9 13
WHILE (264) 32
MAIS (265) 49
MENOS (266) 50
VEZES (267) 53
BARRA (268) 54
MENOR (269) 42
MENORIGUAL (270) 41
MAIOR (271) 43
MAIORIGUAL (272) 44
IGUALIGUAL (273) 45
DIFERENTE (274) 46
IGUAL (275) 35
PONTOVIRGULA (276) 6 7 28 29 33 34
VIRGULA (277) 14 63
ABREPARENTESIS (278) 11 30 31 32 55 60
FECHAPARENTESIS (279) 11 30 31 32 55 60
ABRECOLCHETE (280) 7 17 38
FECHACOLCHETE (281) 7 17 38
ABRECHAVE (282) 18
FECHACHAVE (283) 18
ID (284) 6 7 11 16 17 37 38 60
CADEIASTRING (285) 59
DIGITO (286) 7 58


Não-terminais com as regras onde eles aparecem

$accept (32)
    à esquerda: 0
PROGRAMA (33)
    à esquerda: 1, à direita: 0
DECLARACAO_LISTA (34)
    à esquerda: 2 3, à direita: 1 2
DECLARACAO (35)
    à esquerda: 4 5, à direita: 2 3
VAR_DECLARACAO (36)
    à esquerda: 6 7, à direita: 4 19
TIPO_ESPECIFICADOR (37)
    à esquerda: 8 9 10, à direita: 6 7 11 16 17
FUN_DECLARACAO (38)
    à esquerda: 11, à direita: 5
PARAMS (39)
    à esquerda: 12 13, à direita: 11
PARAM_LISTA (40)
    à esquerda: 14 15, à direita: 12 14
PARAM (41)
    à esquerda: 16 17, à direita: 14 15
COMPOSTO_DECL (42)
    à esquerda: 18, à direita: 11 24
LOCAL_DECLARACOES (43)
    à esquerda: 19 20, à direita: 18 19
STATEMENT_LISTA (44)
    à esquerda: 21 22, à direita: 18 21
STATEMENT (45)
    à esquerda: 23 24 25 26 27, à direita: 21 30 31 32
EXPRESSAO_DECL (46)
    à esquerda: 28 29, à direita: 23
SELECAO_DECL (47)
    à esquerda: 30 31, à direita: 25
INTERACAO_DECL (48)
    à esquerda: 32, à direita: 26
RETORNO_DECL (49)
    à esquerda: 33 34, à direita: 27
EXPRESSAO (50)
    à esquerda: 35 36, à direita: 28 30 31 32 34 35 38 55 63 64
VAR (51)
    à esquerda: 37 38, à direita: 35 56
SIMPLES_EXPRESSAO (52)
    à esquerda: 39 40, à direita: 36
RELACIONAL (53)
    à esquerda: 41 42 43 44 45 46, à direita: 39
SOMA_EXPRESSAO (54)
    à esquerda: 47 48, à direita: 39 40 47
SOMA (55)
    à esquerda: 49 50, à direita: 47
TERMO (56)
    à esquerda: 51 52, à direita: 47 48 51
MULT (57)
    à esquerda: 53 54, à direita: 51
FATOR (58)
    à esquerda: 55 56 57 58 59, à direita: 51 52
ATIVACAO (59)
    à esquerda: 60, à direita: 57
ARGS (60)
    à esquerda: 61 62, à direita: 60
ARG_LISTA (61)
    à esquerda: 63 64, à direita: 61 63


State 0

    0 $accept: . PROGRAMA $end

    STRING  deslocar, e ir ao estado 1
    INT     deslocar, e ir ao estado 2
    VOID    deslocar, e ir ao estado 3

    PROGRAMA            ir ao estado 4
    DECLARACAO_LISTA    ir ao estado 5
    DECLARACAO          ir ao estado 6
    VAR_DECLARACAO      ir ao estado 7
    TIPO_ESPECIFICADOR  ir ao estado 8
    FUN_DECLARACAO      ir ao estado 9


State 1

   10 TIPO_ESPECIFICADOR: STRING .

    $padrão  reduzir usando a regra 10 (TIPO_ESPECIFICADOR)


State 2

    8 TIPO_ESPECIFICADOR: INT .

    $padrão  reduzir usando a regra 8 (TIPO_ESPECIFICADOR)


State 3

    9 TIPO_ESPECIFICADOR: VOID .

    $padrão  reduzir usando a regra 9 (TIPO_ESPECIFICADOR)


State 4

    0 $accept: PROGRAMA . $end

    $end  deslocar, e ir ao estado 10


State 5

    1 PROGRAMA: DECLARACAO_LISTA .
    2 DECLARACAO_LISTA: DECLARACAO_LISTA . DECLARACAO

    STRING  deslocar, e ir ao estado 1
    INT     deslocar, e ir ao estado 2
    VOID    deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 1 (PROGRAMA)

    DECLARACAO          ir ao estado 11
    VAR_DECLARACAO      ir ao estado 7
    TIPO_ESPECIFICADOR  ir ao estado 8
    FUN_DECLARACAO      ir ao estado 9


State 6

    3 DECLARACAO_LISTA: DECLARACAO .

    $padrão  reduzir usando a regra 3 (DECLARACAO_LISTA)


State 7

    4 DECLARACAO: VAR_DECLARACAO .

    $padrão  reduzir usando a regra 4 (DECLARACAO)


State 8

    6 VAR_DECLARACAO: TIPO_ESPECIFICADOR . ID PONTOVIRGULA
    7               | TIPO_ESPECIFICADOR . ID ABRECOLCHETE DIGITO FECHACOLCHETE PONTOVIRGULA
   11 FUN_DECLARACAO: TIPO_ESPECIFICADOR . ID ABREPARENTESIS PARAMS FECHAPARENTESIS COMPOSTO_DECL

    ID  deslocar, e ir ao estado 12


State 9

    5 DECLARACAO: FUN_DECLARACAO .

    $padrão  reduzir usando a regra 5 (DECLARACAO)


State 10

    0 $accept: PROGRAMA $end .

    $padrão  aceitar


State 11

    2 DECLARACAO_LISTA: DECLARACAO_LISTA DECLARACAO .

    $padrão  reduzir usando a regra 2 (DECLARACAO_LISTA)


State 12

    6 VAR_DECLARACAO: TIPO_ESPECIFICADOR ID . PONTOVIRGULA
    7               | TIPO_ESPECIFICADOR ID . ABRECOLCHETE DIGITO FECHACOLCHETE PONTOVIRGULA
   11 FUN_DECLARACAO: TIPO_ESPECIFICADOR ID . ABREPARENTESIS PARAMS FECHAPARENTESIS COMPOSTO_DECL

    PONTOVIRGULA    deslocar, e ir ao estado 13
    ABREPARENTESIS  deslocar, e ir ao estado 14
    ABRECOLCHETE    deslocar, e ir ao estado 15


State 13

    6 VAR_DECLARACAO: TIPO_ESPECIFICADOR ID PONTOVIRGULA .

    $padrão  reduzir usando a regra 6 (VAR_DECLARACAO)


State 14

   11 FUN_DECLARACAO: TIPO_ESPECIFICADOR ID ABREPARENTESIS . PARAMS FECHAPARENTESIS COMPOSTO_DECL

    STRING  deslocar, e ir ao estado 1
    INT     deslocar, e ir ao estado 2
    VOID    deslocar, e ir ao estado 16

    TIPO_ESPECIFICADOR  ir ao estado 17
    PARAMS              ir ao estado 18
    PARAM_LISTA         ir ao estado 19
    PARAM               ir ao estado 20


State 15

    7 VAR_DECLARACAO: TIPO_ESPECIFICADOR ID ABRECOLCHETE . DIGITO FECHACOLCHETE PONTOVIRGULA

    DIGITO  deslocar, e ir ao estado 21


State 16

    9 TIPO_ESPECIFICADOR: VOID .
   13 PARAMS: VOID .

    FECHAPARENTESIS  reduzir usando a regra 13 (PARAMS)
    $padrão         reduzir usando a regra 9 (TIPO_ESPECIFICADOR)


State 17

   16 PARAM: TIPO_ESPECIFICADOR . ID
   17      | TIPO_ESPECIFICADOR . ID ABRECOLCHETE FECHACOLCHETE

    ID  deslocar, e ir ao estado 22


State 18

   11 FUN_DECLARACAO: TIPO_ESPECIFICADOR ID ABREPARENTESIS PARAMS . FECHAPARENTESIS COMPOSTO_DECL

    FECHAPARENTESIS  deslocar, e ir ao estado 23


State 19

   12 PARAMS: PARAM_LISTA .
   14 PARAM_LISTA: PARAM_LISTA . VIRGULA PARAM

    VIRGULA  deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 12 (PARAMS)


State 20

   15 PARAM_LISTA: PARAM .

    $padrão  reduzir usando a regra 15 (PARAM_LISTA)


State 21

    7 VAR_DECLARACAO: TIPO_ESPECIFICADOR ID ABRECOLCHETE DIGITO . FECHACOLCHETE PONTOVIRGULA

    FECHACOLCHETE  deslocar, e ir ao estado 25


State 22

   16 PARAM: TIPO_ESPECIFICADOR ID .
   17      | TIPO_ESPECIFICADOR ID . ABRECOLCHETE FECHACOLCHETE

    ABRECOLCHETE  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 16 (PARAM)


State 23

   11 FUN_DECLARACAO: TIPO_ESPECIFICADOR ID ABREPARENTESIS PARAMS FECHAPARENTESIS . COMPOSTO_DECL

    ABRECHAVE  deslocar, e ir ao estado 27

    COMPOSTO_DECL  ir ao estado 28


State 24

   14 PARAM_LISTA: PARAM_LISTA VIRGULA . PARAM

    STRING  deslocar, e ir ao estado 1
    INT     deslocar, e ir ao estado 2
    VOID    deslocar, e ir ao estado 3

    TIPO_ESPECIFICADOR  ir ao estado 17
    PARAM               ir ao estado 29


State 25

    7 VAR_DECLARACAO: TIPO_ESPECIFICADOR ID ABRECOLCHETE DIGITO FECHACOLCHETE . PONTOVIRGULA

    PONTOVIRGULA  deslocar, e ir ao estado 30


State 26

   17 PARAM: TIPO_ESPECIFICADOR ID ABRECOLCHETE . FECHACOLCHETE

    FECHACOLCHETE  deslocar, e ir ao estado 31


State 27

   18 COMPOSTO_DECL: ABRECHAVE . LOCAL_DECLARACOES STATEMENT_LISTA FECHACHAVE

    $padrão  reduzir usando a regra 20 (LOCAL_DECLARACOES)

    LOCAL_DECLARACOES  ir ao estado 32


State 28

   11 FUN_DECLARACAO: TIPO_ESPECIFICADOR ID ABREPARENTESIS PARAMS FECHAPARENTESIS COMPOSTO_DECL .

    $padrão  reduzir usando a regra 11 (FUN_DECLARACAO)


State 29

   14 PARAM_LISTA: PARAM_LISTA VIRGULA PARAM .

    $padrão  reduzir usando a regra 14 (PARAM_LISTA)


State 30

    7 VAR_DECLARACAO: TIPO_ESPECIFICADOR ID ABRECOLCHETE DIGITO FECHACOLCHETE PONTOVIRGULA .

    $padrão  reduzir usando a regra 7 (VAR_DECLARACAO)


State 31

   17 PARAM: TIPO_ESPECIFICADOR ID ABRECOLCHETE FECHACOLCHETE .

    $padrão  reduzir usando a regra 17 (PARAM)


State 32

   18 COMPOSTO_DECL: ABRECHAVE LOCAL_DECLARACOES . STATEMENT_LISTA FECHACHAVE
   19 LOCAL_DECLARACOES: LOCAL_DECLARACOES . VAR_DECLARACAO

    STRING  deslocar, e ir ao estado 1
    INT     deslocar, e ir ao estado 2
    VOID    deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 22 (STATEMENT_LISTA)

    VAR_DECLARACAO      ir ao estado 33
    TIPO_ESPECIFICADOR  ir ao estado 34
    STATEMENT_LISTA     ir ao estado 35


State 33

   19 LOCAL_DECLARACOES: LOCAL_DECLARACOES VAR_DECLARACAO .

    $padrão  reduzir usando a regra 19 (LOCAL_DECLARACOES)


State 34

    6 VAR_DECLARACAO: TIPO_ESPECIFICADOR . ID PONTOVIRGULA
    7               | TIPO_ESPECIFICADOR . ID ABRECOLCHETE DIGITO FECHACOLCHETE PONTOVIRGULA

    ID  deslocar, e ir ao estado 36


State 35

   18 COMPOSTO_DECL: ABRECHAVE LOCAL_DECLARACOES STATEMENT_LISTA . FECHACHAVE
   21 STATEMENT_LISTA: STATEMENT_LISTA . STATEMENT

    IF              deslocar, e ir ao estado 37
    RETURN          deslocar, e ir ao estado 38
    WHILE           deslocar, e ir ao estado 39
    PONTOVIRGULA    deslocar, e ir ao estado 40
    ABREPARENTESIS  deslocar, e ir ao estado 41
    ABRECHAVE       deslocar, e ir ao estado 27
    FECHACHAVE      deslocar, e ir ao estado 42
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    COMPOSTO_DECL      ir ao estado 46
    STATEMENT          ir ao estado 47
    EXPRESSAO_DECL     ir ao estado 48
    SELECAO_DECL       ir ao estado 49
    INTERACAO_DECL     ir ao estado 50
    RETORNO_DECL       ir ao estado 51
    EXPRESSAO          ir ao estado 52
    VAR                ir ao estado 53
    SIMPLES_EXPRESSAO  ir ao estado 54
    SOMA_EXPRESSAO     ir ao estado 55
    TERMO              ir ao estado 56
    FATOR              ir ao estado 57
    ATIVACAO           ir ao estado 58


State 36

    6 VAR_DECLARACAO: TIPO_ESPECIFICADOR ID . PONTOVIRGULA
    7               | TIPO_ESPECIFICADOR ID . ABRECOLCHETE DIGITO FECHACOLCHETE PONTOVIRGULA

    PONTOVIRGULA  deslocar, e ir ao estado 13
    ABRECOLCHETE  deslocar, e ir ao estado 15


State 37

   30 SELECAO_DECL: IF . ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT
   31             | IF . ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT ELSE STATEMENT

    ABREPARENTESIS  deslocar, e ir ao estado 59


State 38

   33 RETORNO_DECL: RETURN . PONTOVIRGULA
   34             | RETURN . EXPRESSAO PONTOVIRGULA

    PONTOVIRGULA    deslocar, e ir ao estado 60
    ABREPARENTESIS  deslocar, e ir ao estado 41
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    EXPRESSAO          ir ao estado 61
    VAR                ir ao estado 53
    SIMPLES_EXPRESSAO  ir ao estado 54
    SOMA_EXPRESSAO     ir ao estado 55
    TERMO              ir ao estado 56
    FATOR              ir ao estado 57
    ATIVACAO           ir ao estado 58


State 39

   32 INTERACAO_DECL: WHILE . ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT

    ABREPARENTESIS  deslocar, e ir ao estado 62


State 40

   29 EXPRESSAO_DECL: PONTOVIRGULA .

    $padrão  reduzir usando a regra 29 (EXPRESSAO_DECL)


State 41

   55 FATOR: ABREPARENTESIS . EXPRESSAO FECHAPARENTESIS

    ABREPARENTESIS  deslocar, e ir ao estado 41
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    EXPRESSAO          ir ao estado 63
    VAR                ir ao estado 53
    SIMPLES_EXPRESSAO  ir ao estado 54
    SOMA_EXPRESSAO     ir ao estado 55
    TERMO              ir ao estado 56
    FATOR              ir ao estado 57
    ATIVACAO           ir ao estado 58


State 42

   18 COMPOSTO_DECL: ABRECHAVE LOCAL_DECLARACOES STATEMENT_LISTA FECHACHAVE .

    $padrão  reduzir usando a regra 18 (COMPOSTO_DECL)


State 43

   37 VAR: ID .
   38    | ID . ABRECOLCHETE EXPRESSAO FECHACOLCHETE
   60 ATIVACAO: ID . ABREPARENTESIS ARGS FECHAPARENTESIS

    ABREPARENTESIS  deslocar, e ir ao estado 64
    ABRECOLCHETE    deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 37 (VAR)


State 44

   59 FATOR: CADEIASTRING .

    $padrão  reduzir usando a regra 59 (FATOR)


State 45

   58 FATOR: DIGITO .

    $padrão  reduzir usando a regra 58 (FATOR)


State 46

   24 STATEMENT: COMPOSTO_DECL .

    $padrão  reduzir usando a regra 24 (STATEMENT)


State 47

   21 STATEMENT_LISTA: STATEMENT_LISTA STATEMENT .

    $padrão  reduzir usando a regra 21 (STATEMENT_LISTA)


State 48

   23 STATEMENT: EXPRESSAO_DECL .

    $padrão  reduzir usando a regra 23 (STATEMENT)


State 49

   25 STATEMENT: SELECAO_DECL .

    $padrão  reduzir usando a regra 25 (STATEMENT)


State 50

   26 STATEMENT: INTERACAO_DECL .

    $padrão  reduzir usando a regra 26 (STATEMENT)


State 51

   27 STATEMENT: RETORNO_DECL .

    $padrão  reduzir usando a regra 27 (STATEMENT)


State 52

   28 EXPRESSAO_DECL: EXPRESSAO . PONTOVIRGULA

    PONTOVIRGULA  deslocar, e ir ao estado 66


State 53

   35 EXPRESSAO: VAR . IGUAL EXPRESSAO
   56 FATOR: VAR .

    IGUAL  deslocar, e ir ao estado 67

    $padrão  reduzir usando a regra 56 (FATOR)


State 54

   36 EXPRESSAO: SIMPLES_EXPRESSAO .

    $padrão  reduzir usando a regra 36 (EXPRESSAO)


State 55

   39 SIMPLES_EXPRESSAO: SOMA_EXPRESSAO . RELACIONAL SOMA_EXPRESSAO
   40                  | SOMA_EXPRESSAO .
   47 SOMA_EXPRESSAO: SOMA_EXPRESSAO . SOMA TERMO

    MAIS        deslocar, e ir ao estado 68
    MENOS       deslocar, e ir ao estado 69
    MENOR       deslocar, e ir ao estado 70
    MENORIGUAL  deslocar, e ir ao estado 71
    MAIOR       deslocar, e ir ao estado 72
    MAIORIGUAL  deslocar, e ir ao estado 73
    IGUALIGUAL  deslocar, e ir ao estado 74
    DIFERENTE   deslocar, e ir ao estado 75

    $padrão  reduzir usando a regra 40 (SIMPLES_EXPRESSAO)

    RELACIONAL  ir ao estado 76
    SOMA        ir ao estado 77


State 56

   48 SOMA_EXPRESSAO: TERMO .
   51 TERMO: TERMO . MULT FATOR

    VEZES  deslocar, e ir ao estado 78
    BARRA  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 48 (SOMA_EXPRESSAO)

    MULT  ir ao estado 80


State 57

   52 TERMO: FATOR .

    $padrão  reduzir usando a regra 52 (TERMO)


State 58

   57 FATOR: ATIVACAO .

    $padrão  reduzir usando a regra 57 (FATOR)


State 59

   30 SELECAO_DECL: IF ABREPARENTESIS . EXPRESSAO FECHAPARENTESIS STATEMENT
   31             | IF ABREPARENTESIS . EXPRESSAO FECHAPARENTESIS STATEMENT ELSE STATEMENT

    ABREPARENTESIS  deslocar, e ir ao estado 41
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    EXPRESSAO          ir ao estado 81
    VAR                ir ao estado 53
    SIMPLES_EXPRESSAO  ir ao estado 54
    SOMA_EXPRESSAO     ir ao estado 55
    TERMO              ir ao estado 56
    FATOR              ir ao estado 57
    ATIVACAO           ir ao estado 58


State 60

   33 RETORNO_DECL: RETURN PONTOVIRGULA .

    $padrão  reduzir usando a regra 33 (RETORNO_DECL)


State 61

   34 RETORNO_DECL: RETURN EXPRESSAO . PONTOVIRGULA

    PONTOVIRGULA  deslocar, e ir ao estado 82


State 62

   32 INTERACAO_DECL: WHILE ABREPARENTESIS . EXPRESSAO FECHAPARENTESIS STATEMENT

    ABREPARENTESIS  deslocar, e ir ao estado 41
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    EXPRESSAO          ir ao estado 83
    VAR                ir ao estado 53
    SIMPLES_EXPRESSAO  ir ao estado 54
    SOMA_EXPRESSAO     ir ao estado 55
    TERMO              ir ao estado 56
    FATOR              ir ao estado 57
    ATIVACAO           ir ao estado 58


State 63

   55 FATOR: ABREPARENTESIS EXPRESSAO . FECHAPARENTESIS

    FECHAPARENTESIS  deslocar, e ir ao estado 84


State 64

   60 ATIVACAO: ID ABREPARENTESIS . ARGS FECHAPARENTESIS

    ABREPARENTESIS  deslocar, e ir ao estado 41
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    $padrão  reduzir usando a regra 62 (ARGS)

    EXPRESSAO          ir ao estado 85
    VAR                ir ao estado 53
    SIMPLES_EXPRESSAO  ir ao estado 54
    SOMA_EXPRESSAO     ir ao estado 55
    TERMO              ir ao estado 56
    FATOR              ir ao estado 57
    ATIVACAO           ir ao estado 58
    ARGS               ir ao estado 86
    ARG_LISTA          ir ao estado 87


State 65

   38 VAR: ID ABRECOLCHETE . EXPRESSAO FECHACOLCHETE

    ABREPARENTESIS  deslocar, e ir ao estado 41
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    EXPRESSAO          ir ao estado 88
    VAR                ir ao estado 53
    SIMPLES_EXPRESSAO  ir ao estado 54
    SOMA_EXPRESSAO     ir ao estado 55
    TERMO              ir ao estado 56
    FATOR              ir ao estado 57
    ATIVACAO           ir ao estado 58


State 66

   28 EXPRESSAO_DECL: EXPRESSAO PONTOVIRGULA .

    $padrão  reduzir usando a regra 28 (EXPRESSAO_DECL)


State 67

   35 EXPRESSAO: VAR IGUAL . EXPRESSAO

    ABREPARENTESIS  deslocar, e ir ao estado 41
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    EXPRESSAO          ir ao estado 89
    VAR                ir ao estado 53
    SIMPLES_EXPRESSAO  ir ao estado 54
    SOMA_EXPRESSAO     ir ao estado 55
    TERMO              ir ao estado 56
    FATOR              ir ao estado 57
    ATIVACAO           ir ao estado 58


State 68

   49 SOMA: MAIS .

    $padrão  reduzir usando a regra 49 (SOMA)


State 69

   50 SOMA: MENOS .

    $padrão  reduzir usando a regra 50 (SOMA)


State 70

   42 RELACIONAL: MENOR .

    $padrão  reduzir usando a regra 42 (RELACIONAL)


State 71

   41 RELACIONAL: MENORIGUAL .

    $padrão  reduzir usando a regra 41 (RELACIONAL)


State 72

   43 RELACIONAL: MAIOR .

    $padrão  reduzir usando a regra 43 (RELACIONAL)


State 73

   44 RELACIONAL: MAIORIGUAL .

    $padrão  reduzir usando a regra 44 (RELACIONAL)


State 74

   45 RELACIONAL: IGUALIGUAL .

    $padrão  reduzir usando a regra 45 (RELACIONAL)


State 75

   46 RELACIONAL: DIFERENTE .

    $padrão  reduzir usando a regra 46 (RELACIONAL)


State 76

   39 SIMPLES_EXPRESSAO: SOMA_EXPRESSAO RELACIONAL . SOMA_EXPRESSAO

    ABREPARENTESIS  deslocar, e ir ao estado 41
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    VAR             ir ao estado 90
    SOMA_EXPRESSAO  ir ao estado 91
    TERMO           ir ao estado 56
    FATOR           ir ao estado 57
    ATIVACAO        ir ao estado 58


State 77

   47 SOMA_EXPRESSAO: SOMA_EXPRESSAO SOMA . TERMO

    ABREPARENTESIS  deslocar, e ir ao estado 41
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    VAR       ir ao estado 90
    TERMO     ir ao estado 92
    FATOR     ir ao estado 57
    ATIVACAO  ir ao estado 58


State 78

   53 MULT: VEZES .

    $padrão  reduzir usando a regra 53 (MULT)


State 79

   54 MULT: BARRA .

    $padrão  reduzir usando a regra 54 (MULT)


State 80

   51 TERMO: TERMO MULT . FATOR

    ABREPARENTESIS  deslocar, e ir ao estado 41
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    VAR       ir ao estado 90
    FATOR     ir ao estado 93
    ATIVACAO  ir ao estado 58


State 81

   30 SELECAO_DECL: IF ABREPARENTESIS EXPRESSAO . FECHAPARENTESIS STATEMENT
   31             | IF ABREPARENTESIS EXPRESSAO . FECHAPARENTESIS STATEMENT ELSE STATEMENT

    FECHAPARENTESIS  deslocar, e ir ao estado 94


State 82

   34 RETORNO_DECL: RETURN EXPRESSAO PONTOVIRGULA .

    $padrão  reduzir usando a regra 34 (RETORNO_DECL)


State 83

   32 INTERACAO_DECL: WHILE ABREPARENTESIS EXPRESSAO . FECHAPARENTESIS STATEMENT

    FECHAPARENTESIS  deslocar, e ir ao estado 95


State 84

   55 FATOR: ABREPARENTESIS EXPRESSAO FECHAPARENTESIS .

    $padrão  reduzir usando a regra 55 (FATOR)


State 85

   64 ARG_LISTA: EXPRESSAO .

    $padrão  reduzir usando a regra 64 (ARG_LISTA)


State 86

   60 ATIVACAO: ID ABREPARENTESIS ARGS . FECHAPARENTESIS

    FECHAPARENTESIS  deslocar, e ir ao estado 96


State 87

   61 ARGS: ARG_LISTA .
   63 ARG_LISTA: ARG_LISTA . VIRGULA EXPRESSAO

    VIRGULA  deslocar, e ir ao estado 97

    $padrão  reduzir usando a regra 61 (ARGS)


State 88

   38 VAR: ID ABRECOLCHETE EXPRESSAO . FECHACOLCHETE

    FECHACOLCHETE  deslocar, e ir ao estado 98


State 89

   35 EXPRESSAO: VAR IGUAL EXPRESSAO .

    $padrão  reduzir usando a regra 35 (EXPRESSAO)


State 90

   56 FATOR: VAR .

    $padrão  reduzir usando a regra 56 (FATOR)


State 91

   39 SIMPLES_EXPRESSAO: SOMA_EXPRESSAO RELACIONAL SOMA_EXPRESSAO .
   47 SOMA_EXPRESSAO: SOMA_EXPRESSAO . SOMA TERMO

    MAIS   deslocar, e ir ao estado 68
    MENOS  deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 39 (SIMPLES_EXPRESSAO)

    SOMA  ir ao estado 77


State 92

   47 SOMA_EXPRESSAO: SOMA_EXPRESSAO SOMA TERMO .
   51 TERMO: TERMO . MULT FATOR

    VEZES  deslocar, e ir ao estado 78
    BARRA  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 47 (SOMA_EXPRESSAO)

    MULT  ir ao estado 80


State 93

   51 TERMO: TERMO MULT FATOR .

    $padrão  reduzir usando a regra 51 (TERMO)


State 94

   30 SELECAO_DECL: IF ABREPARENTESIS EXPRESSAO FECHAPARENTESIS . STATEMENT
   31             | IF ABREPARENTESIS EXPRESSAO FECHAPARENTESIS . STATEMENT ELSE STATEMENT

    IF              deslocar, e ir ao estado 37
    RETURN          deslocar, e ir ao estado 38
    WHILE           deslocar, e ir ao estado 39
    PONTOVIRGULA    deslocar, e ir ao estado 40
    ABREPARENTESIS  deslocar, e ir ao estado 41
    ABRECHAVE       deslocar, e ir ao estado 27
    ID              deslocar, e ir ao estado 43
    CADEIASTRING    deslocar, e ir ao estado 44
    DIGITO          deslocar, e ir ao estado 45

    COMPOSTO_DECL      ir ao estado 46
    STATEMENT          ir ao estado 99
    EXPRESSAO_DECL     ir ao estado 48
    SELECAO_DECL       ir ao estado 49
    INTERACAO_DECL     ir ao estado 50
    RETORNO_DECL       ir ao estado 51
    EXPRESSAO          ir ao estado 52
    VAR                ir ao estado 53
    SIMPLES_EXPRESSAO  ir ao estado 54
    SOMA_EXPRESSAO     ir ao estado 55
    TERMO              ir ao estado 56
    FATOR              ir ao estado 57
    ATIVACAO           ir ao estado 58


State 95

   32 INTERACAO_DECL: WHILE ABREPARENTESIS EXPRESSAO FECHAPARENTESIS . STATEMENT
